--- a/JulianPerrottName/Areas/Home/Views/Shared/_Navbar.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Navbar.cshtml
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="@Url.Content("~")">Julian Perrott</a>
+            <a class="navbar-brand" href="@Url.Content("~")">CodesIn.net</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
