Added loading of project pages to home page

--- a/JulianPerrottName/Areas/Home/Views/Home/_Welcome.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/_Welcome.cshtml
@@ -9,9 +9,9 @@
         <p>
             Welcome to my personal site.
             <br /><br />
-            I began coding while at school and all these years later I still play with code when not at work.
+            I've been coding for most of my life, it's the strange mixture of creative, scientific and constant change which never gets old. 
             <br /><br />
-            Here on this site you will find examples of me experimenting with different web technologies, to try and both understand them and showcase their possibilties. Take a look at my blog and the
+            Here on this site you will find examples of me experimenting with different web,server and database technologies, to try and both understand them and showcase their possibilities. Take a look at my blog and the
             projects below to see what I am having fun with.
             <br /><br />
             <br /><br />
