--- a/JulianPerrottName/Areas/Home/Views/Home/_BlogSummary.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/_BlogSummary.cshtml
@@ -1,45 +1,28 @@
 ﻿@using JulianPerrottName.Models;
-@model List<BlogPostSummary>
+@model List<PageSummary>
 
 @{
     Layout = null;
 }
 
-
-@if(Model==null || Model.Count==0 )
+@if (Model == null || Model.Count == 0)
 {
-    <div class="media">
-        <a class="pull-left" href="#">
-            <img class="media-object" src="~/Areas/Home/img/blog-1.jpg" alt="Blog Message">
-        </a>
-        <div class="media-body">
-            <h4 class="media-heading"><a href="#">Story title</a></h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id ipsum varius, tincidunt odio nec, placerat enim.
-        </div>
-    </div>
-
-    <div class="media">
-        <a class="pull-left" href="#">
-            <img class="media-object" src="~/Areas/Home/img/blog-2.jpg" alt="Blog Message">
-        </a>
-        <div class="media-body">
-            <h4 class="media-heading"><a href="#">Story title</a></h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id ipsum varius, tincidunt odio nec, placerat enim.
-        </div>
-    </div>
-    <div class="media">
-        <a class="pull-left" href="#">
-            <img class="media-object" src="~/Areas/Home/img/blog-3.jpg" alt="Blog Message">
-        </a>
-        <div class="media-body">
-            <h4 class="media-heading"><a href="#">Story title</a></h4>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id ipsum varius, tincidunt odio nec, placerat enim.
-        </div>
-    </div>
+    <p>No content found.</p>
 }
 else
 {
-    @Html.DisplayFor(model => model);
+    foreach (var summary in Model)
+    {
+        <div class="media">
+            <a class="pull-left" href="#">
+                <img class="media-object" src="@summary.Image" alt="Blog Message">
+            </a>
+            <div class="media-body">
+                <h4 class="media-heading"><a href="#">@summary.Title</a></h4>
+                @summary.Description
+            </div>
+        </div>
+    }
 }
 
 <a href="#" class="read-more">Read more stories...</a>
