--- a/JulianPerrottName/Areas/Home/Views/Home/_RecentWorks.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/_RecentWorks.cshtml
@@ -6,73 +6,9 @@
         </h2>
     </div>
 </div>
+
 <div class="row">
-    <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-            <img src="~/Areas/Home/img/works1.jpg" class="img-responsive" alt="...">
-            <div class="visit"><a href="#"><i class="fa fa-question-circle"></i> More details...</a></div>
-            <div class="caption">
-                <h4>Project #1</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-            <img src="~/Areas/Home/img/works2.jpg" class="img-responsive" alt="...">
-            <div class="visit"><a href="#"><i class="fa fa-question-circle"></i> More details...</a></div>
-            <div class="caption">
-                <h4>Project #2</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-            </div>
-        </div>
-    </div>
-    <div class="clearfix visible-sm"></div>
-    <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-            <img src="~/Areas/Home/img/works3.jpg" class="img-responsive" alt="...">
-            <div class="visit"><a href="#"><i class="fa fa-question-circle"></i> More details...</a></div>
-            <div class="caption">
-                <h4>Project #3</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half"></i>
-                </div>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-            <img src="~/Areas/Home/img/works4.jpg" class="img-responsive" alt="...">
-            <div class="visit"><a href="#"><i class="fa fa-question-circle"></i> More details...</a></div>
-            <div class="caption">
-                <h4>Project #4</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-            </div>
-        </div>
+    <div class="partialContents" data-url="@Url.Action("ProjectSummary","Home",new { area = "Home" })">
+        <img src="@Url.Content("~/Areas/Home/img/indicator.white.gif")" /> Loading ...
     </div>
 </div>
